# activity-sync

./: .env.example  .gitignore  .releaserc.json  .releaserc.yaml  CHANGELOG.md  Dockerfile  README.md  activity_sync_service.py  pyproject.toml  samba.conf
.github/: CODEOWNERS  CONTRIBUTING.md
.github/workflows/: release.yml
activity_sync/: __init__.py  config.py  nextcloud_client.py  nextcloud_state.py  strava_client.py  sync_daemon.py  syncer.py
activity_sync.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
activity_sync/strava2gpx/: __init__.py  client.py
tests/: test_single_activity.py
