[project]
name = "activity-sync"
version = "0.1.0"
description = "Sync Strava GPX activities to Nextcloud using strava2gpx and Nextcloud API."
authors = [{ name = "Andy Airey", email = "airey.andy@gmail.com" }]
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.0",
    "nextcloud-api-wrapper>=0.2.0",
    "python-dotenv>=1.0.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "flake8>=7.1.0",
    "isort>=5.13.2",
    "ruff>=0.8.0",
    "pylint>=3.3.0",
    "black>=24.10.0",
    "python-semantic-release>=10.5.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["activity_sync", "activity_sync.strava2gpx"]
package-data = { "activity_sync" = ["py.typed"] }

[tool.black]
line-length = 120
target-version = ['py314']
include = '\.pyi?$'

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.isort]
profile = "black"
line_length = 120

[tool.pylint]
line_length = 120

[tool.semantic_release]
version_variable = "pyproject.toml:project.version"
version_pattern = "version = \"{version}\""
tag_format = "v{version}"
branch = "main"
upload_to_pypi = false
upload_to_release = true
changelog_file = "CHANGELOG.md"
commit_parser = "conventional"
allow_zero_version = true
prerelease_token = "rc"
prerelease = false
hvcs = "github"